[gd_scene load_steps=2 format=3 uid="uid://dej7mk3nvwqh0"]

[ext_resource type="Script" uid="uid://bgrxwffamgcc5" path="res://project/terrain/Debugging/terrain_debugger.gd" id="1_yo4ud"]

[node name="TerrainDebugger" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yo4ud")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_stretch_ratio = 5.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TerrainDebug"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lblPlayerWorldPos" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "World Pos: N/A"

[node name="lblPlayerChunkPos" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Chunk Pos: N/A"

[node name="lblChunkState" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Chunk State: N/A"

[node name="lblHeight" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Height: N/A"

[node name="lblBiome" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Biome: N/A"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VisualizationMode" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Visualization Mode:"

[node name="VisOptionsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="chkVisNormal" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VisOptionsContainer"]
layout_mode = 2
button_pressed = true
text = "Normal"

[node name="chkVisHeight" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VisOptionsContainer"]
layout_mode = 2
text = "Height map"

[node name="chkVisBiomeID" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/VisOptionsContainer"]
layout_mode = 2
text = "Biome ID"
